--- a/DMSDriver/DMSDriver/Resources/Storyboards/PurchaseOrder.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/PurchaseOrder.storyboard
@@ -392,6 +392,72 @@
             </objects>
             <point key="canvasLocation" x="-447" y="343"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="6Xw-jh-LI7">
+            <objects>
+                <viewController id="Eif-1S-YVp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2sV-If-ZTN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4fl-DX-Wbs">
+                                <rect key="frame" x="43" y="201" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0cF-nO-8ZR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ONj-68-ugK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-284" y="-228"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="s3y-Z1-L3c">
+            <objects>
+                <viewController id="vKa-BZ-uLU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6Wn-7R-CzS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Yr-EN-erv">
+                                <rect key="frame" x="40" y="170" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="cPO-qQ-8zp"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4xT-id-HeE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="266" y="-453"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kUv-P6-xGv">
+            <objects>
+                <viewController id="RGd-fC-MbZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VCv-rs-FuE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i7O-bg-ekc">
+                                <rect key="frame" x="67" y="123" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Fsc-GR-3fF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zV0-Lk-Thw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="185" y="19"/>
+        </scene>
         <!--Purchase Order DetailVC-->
         <scene sceneID="eXm-oE-gOm">
             <objects>
